# FrostWall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: color_ops.rs
config/: default.toml
docs/: CONFIGURATION.md  README.md  USAGE.md  collab-core-guide.md  collab-mvp.md  collab-roadmap.md
scripts/: gen_embeddings.py  gen_embeddings_bin.py
src/: app.rs  cli_cmds.rs  clip.rs  clip_embeddings.rs  clip_embeddings_bin.rs  collections.rs  init.rs  main.rs  organize.rs  pairing.rs  profile.rs  pywal.rs  screen.rs  swww.rs  thumbnail.rs  timeprofile.rs  utils.rs  wallpaper.rs  wallpaper_backend.rs  watch.rs  webimport.rs
src/app/: actions.rs  analysis.rs  commands.rs  config.rs  filters.rs  navigation.rs  pairing_ui.rs  perf.rs  runtime.rs  thumbnails.rs
src/cli/: args.rs  mod.rs  runner.rs
src/cli_cmds/: auto_tag.rs  collection_cmds.rs  core.rs  import_cmds.rs  mod.rs  organize_cmds.rs  pairing_cmds.rs  support.rs  tagging.rs  time_profile.rs
src/clip/: categories.rs  mod.rs  model.rs  preprocess.rs  tagger.rs
src/organize/: bucket.rs  dedupe.rs  (+3 more)
tests/: cli_integration.rs
tools/collab-core/: Cargo.toml  README.md
tools/collab-core/src/: api.rs  main.rs  model.rs  observer.rs  state.rs
tools/displayfrost-hardfork/: Cargo.toml  README.md  displayfrost-codex.md
tools/displayfrost-hardfork/docs/: handoff-claude.md  implementation-plan.md  research.md
tools/displayfrost-hardfork/src/: castv2.rs  chromecast.rs  config.rs  doctor.rs  main.rs  miracast.rs  report.rs  setup.rs  tui.rs  util.rs
(+60 files in other folders)
