[package]
name = "displayfrost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
native-tls = "0.2.12"
prost = "0.13.5"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
libc = "0.2"
